clean up tests
- now have a 'master script' in the root that executes all server IT-tests
- removed SystemRules (causing error messages), deprecated usage in newer java versions